--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1702,10 +1702,12 @@
 
 		/* My Edits */
 		p.about {
-			font-size: 16px;
+			margin: 0 auto;
+			display: block;
+			font-size: 18px;
 			line-height: 1.75em;
 			text-align: left;
-			width: 700px;
+			width: 650px;
 		}
 
 		p.project {
@@ -1934,7 +1936,7 @@
 		color: #fff !important;
 		text-decoration: none;
 		padding: 0.75em 2.5em 0.75em 2.5em;
-		background-color: #41484C;
+		background-color: #212528;
 		border: 0;
 		cursor: pointer;
 		background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
