--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1707,7 +1707,7 @@
 			font-size: 18px;
 			line-height: 1.75em;
 			text-align: left;
-			width: 650px;
+			width: 600px;
 		}
 
 		p.project {
@@ -2125,6 +2125,7 @@
 		margin-left: 375px;
 		text-align: center;
 		background-color: #dce3e2;
+		background-image: url("../../images/downtown_small.png");
 		padding: 3em 0 4em 0;
 		box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 		font-size: 0.8em;
@@ -2146,7 +2147,6 @@
 				#footer .copyright li:first-child {
 					border-left: 0;
 					padding-left: 0;
-					margin-left: 0;
 				}
 
 /* Main */
