--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2125,7 +2125,7 @@
 		margin-left: 375px;
 		text-align: center;
 		background-color: #dce3e2;
-		background-image: url("../../images/downtown_small.png");
+		background-image: url("../../images/skyline_small.png");
 		padding: 3em 0 4em 0;
 		box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 		font-size: 0.8em;
