added new background and changed about me

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2195,7 +2195,7 @@
 
 			#main > section.one {
 				background-color: #81918E;
-				background-image: url("../../images/stars.jpg");
+				background-image: url("../../images/mountain_front.jpg");
 			}
 
 			#main > section.two {
