--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1599,7 +1599,7 @@
 	}
 
 		h2.alt {
-			color: #888;
+			color: #212528;
 		}
 
 			h2.alt strong {
@@ -1706,7 +1706,7 @@
 			display: block;
 			font-size: 18px;
 			line-height: 1.75em;
-			text-align: left;
+			text-align: center;
 			width: 600px;
 		}
 
